feat: Add illustrations section and placeholders

--- a/index.html
+++ b/index.html
@@ -22,6 +22,27 @@
             <button>Sign up</button>
             <img class="hero-image" src="https://placeholder.pics/svg/500x200" alt="Placeholder image">
         </div>
+        <div class="illustrations-section">
+            <h2>Some random information</h2>
+            <div class="images-container">
+                <div class="image-and-description">
+                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                    <p class="image-description"></p>
+                </div>
+                <div class="image-and-description">
+                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                    <p class="image-description"></p>
+                </div>
+                <div class="image-and-description">
+                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                    <p class="image-description"></p>
+                </div>
+                <div class="image-and-description">
+                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                    <p class="image-description"></p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
