--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             <div class="images-container">
                 <div class="image-and-description">
                     <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-description"></p>
+                    <p class="image-subtext">this is some subtext under illustration or image</p>
                 </div>
                 <div class="image-and-description">
                     <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-description"></p>
+                    <p class="image-subtext">this is some subtext under illustration or image</p>
                 </div>
                 <div class="image-and-description">
                     <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-description"></p>
+                    <p class="image-subtext">this is some subtext under illustration or image</p>
                 </div>
                 <div class="image-and-description">
                     <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-description"></p>
+                    <p class="image-subtext">this is some subtext under illustration or image</p>
                 </div>
             </div>
         </div>
