--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
                 </div>
             </div>
         </div>
+        <div class="quote-section">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
+        <div class="call-to-action-section">
+            <div class="banner">
+                <div class="text-container">
+                    <p>Call to action! It's time!</p>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
     </main>
     <footer>
 
