fix: Add missing classes on logo and header nav

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="#">Header Logo</a>
-        <ul>
+        <a href="#" class="header-logo">Header Logo</a>
+        <ul class="header-nav">
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
