--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 </head>
 <body>
     <header>
-        <a href="#" class="header-logo">Header Logo</a>
-        <ul class="header-nav">
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </header>
-    <main>
+        <div class="top-section">
+            <a href="#" class="header-logo">Header Logo</a>
+            <ul class="header-nav">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
         <div class="hero-section">
             <h1>This website is awesome</h1>
             <h3>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</h3>
             <button>Sign up</button>
             <img class="hero-image" src="https://placeholder.pics/svg/500x200" alt="Placeholder image">
         </div>
+    </header>
+    <main>
         <div class="illustrations-section">
             <h2>Some random information</h2>
             <div class="images-container">
