--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="call-to-action-section">
             <div class="banner">
                 <div class="text-container">
-                    <p>Call to action! It's time!</p>
-                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <p class="call">Call to action! It's time!</p>
+                    <p class="call-subtext">Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <button>Sign up</button>
             </div>
