feat: Add container around hero section text

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             </ul>
         </div>
         <div class="hero-section">
-            <h1>This website is awesome</h1>
-            <h3>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</h3>
-            <button>Sign up</button>
+            <div class = "text-container">
+                <h1>This website is awesome</h1>
+                <h3>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</h3>
+                <button>Sign up</button>
+            </div>
             <img class="hero-image" src="https://placeholder.pics/svg/500x200" alt="Placeholder image">
         </div>
     </header>
