feat: Set 1080px max-width for the page content

--- a/index.html
+++ b/index.html
@@ -8,61 +8,71 @@
 </head>
 <body>
     <header>
-        <div class="top-section">
-            <a href="#" class="header-logo">Header Logo</a>
-            <ul class="header-nav">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </div>
-        <div class="hero-section">
-            <div class = "text-container">
-                <h1>This website is awesome</h1>
-                <h3>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</h3>
-                <button>Sign up</button>
+        <div class="width-limiter">
+            <div class="top-section">
+                <a href="#" class="header-logo">Header Logo</a>
+                <ul class="header-nav">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
             </div>
-            <img class="hero-image" src="https://placeholder.pics/svg/500x200" alt="Placeholder image">
+            <div class="hero-section">
+                <div class = "text-container">
+                    <h1>This website is awesome</h1>
+                    <h3>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</h3>
+                    <button>Sign up</button>
+                </div>
+                <img class="hero-image" src="https://placeholder.pics/svg/500x200" alt="Placeholder image">
+            </div>
         </div>
     </header>
     <main>
         <div class="illustrations-section">
-            <h2>Some random information</h2>
-            <div class="images-container">
-                <div class="image-and-description">
-                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-subtext">this is some subtext under illustration or image</p>
-                </div>
-                <div class="image-and-description">
-                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-subtext">this is some subtext under illustration or image</p>
-                </div>
-                <div class="image-and-description">
-                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-subtext">this is some subtext under illustration or image</p>
-                </div>
-                <div class="image-and-description">
-                    <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
-                    <p class="image-subtext">this is some subtext under illustration or image</p>
+            <div class="width-limiter">
+                <h2>Some random information</h2>
+                <div class="images-container">
+                    <div class="image-and-description">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <p class="image-subtext">this is some subtext under illustration or image</p>
+                    </div>
+                    <div class="image-and-description">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <p class="image-subtext">this is some subtext under illustration or image</p>
+                    </div>
+                    <div class="image-and-description">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <p class="image-subtext">this is some subtext under illustration or image</p>
+                    </div>
+                    <div class="image-and-description">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <p class="image-subtext">this is some subtext under illustration or image</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="quote-section">
-            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="author">-Thor, God of Thunder</p>
+            <div class="width-limiter">
+                <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="author">-Thor, God of Thunder</p>
+            </div>
         </div>
         <div class="call-to-action-section">
-            <div class="banner">
-                <div class="text-container">
-                    <p class="call">Call to action! It's time!</p>
-                    <p class="call-subtext">Sign up for our product by clicking that button right over there!</p>
+            <div class="width-limiter">
+                <div class="banner">
+                    <div class="text-container">
+                        <p class="call">Call to action! It's time!</p>
+                        <p class="call-subtext">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button>Sign up</button>
                 </div>
-                <button>Sign up</button>
             </div>
         </div>
     </main>
     <footer>
+        <div class="width-limiter">
         Copyright © The Odin Project 2025
+        </div>
     </footer>
 </body>
 </html>
