fix: Swap h3 to p, add breakline between sentences

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <div class="hero-section">
                 <div class = "text-container">
                     <h1>This website is awesome</h1>
-                    <h3>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</h3>
+                    <p>This website has some subtext that goes under the main title.
+                    <br>
+                    It's a smaller font and the color is lower contrast.</p>
                     <button>Sign up</button>
                 </div>
                 <img class="hero-image" src="https://placeholder.pics/svg/500x200" alt="Placeholder image">
