--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     <main>
         <div class="illustrations-section">
             <div class="width-limiter">
-                <h2>Some random information</h2>
+                <h2>Some random information.</h2>
                 <div class="images-container">
                     <div class="image-and-description">
-                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/160x160" alt="Placeholder image">
                         <p class="image-subtext">this is some subtext under illustration or image</p>
                     </div>
                     <div class="image-and-description">
-                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/160x160" alt="Placeholder image">
                         <p class="image-subtext">this is some subtext under illustration or image</p>
                     </div>
                     <div class="image-and-description">
-                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/160x160" alt="Placeholder image">
                         <p class="image-subtext">this is some subtext under illustration or image</p>
                     </div>
                     <div class="image-and-description">
-                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/80x80" alt="Placeholder image">
+                        <img class="medium-rounded-image" src="https://placeholder.pics/svg/160x160" alt="Placeholder image">
                         <p class="image-subtext">this is some subtext under illustration or image</p>
                     </div>
                 </div>
